# Premise_Embedding

./: .gitattributes  .gitignore  CONDA_PACKAGING_PLAN.md  EMBED_TEXT_LAYERING_REFACTOR.md  EMBED_TEXT_LAYERING_REFACTOR_PLAN.md  FOREIGN_RESCUE.md  PIDE_State_Test.thy  README.md  ROOT  Semantic_Collection_App.thy  Semantic_Embedding.thy  Sledgehammer_Embedding.thy  Sledgehammer_Embedding_Tetst.thy  TODO.md  collect_semantics.py  debug_launcher.py  migrate_record_provenance.py  pyproject.toml  semantics_manage.py  setup.py  test_auto_embed_gate_off.py  test_complete_vector_store.py  test_config_resolution.py  test_document_text.py  test_embedding_provider_refactor.py  test_experience_index.py  test_getenv_resolution.py  test_interpretation_error_classifier.py  test_r2_sync.py
.github/workflows/: release-conda.yml  verify-pypi.yml  wheels.yml
Isabelle_Premise_Embedding/: __init__.py
Isabelle_Semantic_Embedding/: __init__.py  _user_config.py  _vecarith.py  _vecgather.c  base.py  config_template.yaml  desugar.py  document_text.py  embedding_config.py  embedding_config_template.yaml  experience_index.py  experience_store.py  hover.py  premise_selection.py  r2_sync.py  semantic_embedding.py  semantic_interpretation.py  semantics.py  semantics_manage.py  theory_hash.py  theory_structure.py
Isabelle_Semantic_Embedding/Agent_Interpretation_Dir/.claude/skills/isabelle-datatype/: SKILL.md
Isabelle_Semantic_Embedding/Agent_Interpretation_Dir/.claude/skills/isabelle-intro-elim-rules/: SKILL.md
Isabelle_Semantic_Embedding/Agent_Interpretation_Dir/.claude/skills/isabelle-record/: SKILL.md
Test/: Command_At_Position_Test.thy  Entity_Position_Test.thy  Infra_Decl_Test.thy  Infra_Test.thy  PIDE_State_Test.thy  Probe_Command_Header_Test.thy  Query_Tool_Test.thy  ROOT
Tools/: Hasher.ML  Hasher.ML.bak  dump_keys.py  explain_term.ML  infra_filter.ML  interpret_command.ML  invalidation.ML  locale_instance.ML  pide_state.ML  semantic_interpretation_app.ML  semantic_store.ML  simd_vector.ML  term_serial_index.ML  theory_hash.ML  theory_structure.ML  theory_structure.thy
Tools/Sledgehammer/: sledgehammer_embedding.ML  sledgehammer_embedding_ctxt.ML
Tools/Vector_Arith/: CMakeLists.txt  isabelle_vector-inl.h  isabelle_vector.cpp  test_gather.cpp  test_ml_dlopen.c  test_topk.cpp
conda/: recipe.yaml
doc/: goto_definition.md  invalidation_limitations.md
etc/: build.props  settings
src/scala/: pide_state.scala
tests/: test_vecarith.py
