[build-system]
# setup.py stages a compiled artifact into the wheel and overrides bdist_wheel's
# tag; 77 is the first setuptools that reads `license` as an SPDX expression rather
# than free-form text. cmake and a C/C++ toolchain must also be on PATH -- those
# cannot be declared here. See setup.py.
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Isabelle_Semantic_Embedding"
version = "0.1.0"
description = "Isabelle Semantic Embedding"
readme = "README.md"
license = "LGPL-2.1-or-later"
# The GNU convention for a library under the LGPL 2.1 (glibc's, among others):
# COPYING carries the ordinary GPL and COPYING.LIB the Lesser one. Both ship,
# because LGPL-2.1 section 3 lets a recipient convert any copy to the plain GPL,
# and they cannot exercise that right without its text.
license-files = ["COPYING", "COPYING.LIB"]
# desugar, hover, premise_selection and semantics annotate with `X | Y` and do not
# import `annotations` from __future__, so those annotations are evaluated at import
# time. isabelle-rpc requires 3.10 independently.
requires-python = ">=3.10"
authors = [
    { name="Qiyuan Xu", email="xqyww123@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    # The wheel carries libisabelle_vector.so, an ELF pinned to one architecture.
    "Operating System :: POSIX :: Linux",
]
# Distribution names, not import names: `Isabelle_RPC_Host` is what you import, but
# `isabelle-rpc` is what pip resolves -- the former does not exist on PyPI, so a
# published wheel naming it could never be installed.
dependencies = [
    "msgpack",
    "isabelle-rpc>=0.3.0",
    "rocksdict",
    "lmdb",
    "platformdirs",
    "transformers",
    "numpy",
    "faiss-cpu",
    "requests",
    "diskcache",
    "claude-agent-sdk",
    "pyyaml",
]

[project.urls]
"Homepage" = "https://github.com/xqyww123/Premise_Embedding"

[tool.setuptools.packages.find]
include = ["Isabelle_Semantic_Embedding", "Isabelle_Semantic_Embedding.*"]
exclude = ["contrib", "contrib.*"]

[tool.setuptools.package-data]
# libisabelle_vector.so is compiled and staged into the build tree by setup.py's
# build_py, not tracked in the source tree; listing it keeps sdist-derived and
# prebuilt-drop-in builds picking it up too.
Isabelle_Semantic_Embedding = ["embedding_config_template.yaml", "libisabelle_vector.so"]
