[build-system]
# setup.py stages a compiled artifact into the wheel and overrides bdist_wheel's
# tag; 77 is the first setuptools that reads `license` as an SPDX expression rather
# than free-form text. cmake and a C/C++ toolchain must also be on PATH -- those
# cannot be declared here. See setup.py.
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Isabelle_Semantic_Embedding"
version = "0.1.0"
description = "Isabelle Semantic Embedding"
readme = "README.md"
license = "LGPL-2.1-or-later"
# The GNU convention for a library under the LGPL 2.1 (glibc's, among others):
# COPYING carries the ordinary GPL and COPYING.LIB the Lesser one. Both ship,
# because LGPL-2.1 section 3 lets a recipient convert any copy to the plain GPL,
# and they cannot exercise that right without its text.
license-files = ["COPYING", "COPYING.LIB"]
# _vecgather is compiled against the limited API, and Py_buffer / PyObject_GetBuffer
# entered it in 3.11, not before ("Limited API and stable ABI since Python 3.11",
# pybuffer.h) -- so an abi3 build cannot go lower. 3.10 reaches end of life on
# 2026-10-31 in any case. (desugar, hover, premise_selection and semantics also
# annotate with `X | Y` without importing `annotations` from __future__, which
# already required 3.10; that constraint is now subsumed.)
requires-python = ">=3.11"
authors = [
    { name="Qiyuan Xu", email="xqyww123@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    # The wheel carries libisabelle_vector.so, an ELF pinned to one architecture.
    # macOS and Windows are planned; see MACOS_WINDOWS_SPLIT_PLAN.md in the parent tree.
    "Operating System :: POSIX :: Linux",
]
# Distribution names, not import names: `Isabelle_RPC_Host` is what you import, but
# `isabelle-rpc` is what pip resolves -- the former does not exist on PyPI, so a
# published wheel naming it could never be installed.
dependencies = [
    "msgpack",
    "isabelle-rpc>=0.3.0",
    "rocksdict",
    "lmdb",
    "platformdirs",
    "transformers",
    "numpy",
    "faiss-cpu",
    # premise_selection and semantic_embedding import it at module level. It also
    # arrives transitively, through mcp (via claude-agent-sdk) and huggingface-hub,
    # which is why nothing has broken -- but a dependency you import is one you own,
    # and mcp's httpx<1.0.0 would silently become our ceiling.
    "httpx",
    "diskcache",
    "claude-agent-sdk",
    "pyyaml",
    # r2_sync: the semantic DB is synced with a Cloudflare R2 bucket over S3.
    "boto3",
]

[project.urls]
"Homepage" = "https://github.com/xqyww123/Premise_Embedding"

[tool.setuptools.packages.find]
include = ["Isabelle_Semantic_Embedding", "Isabelle_Semantic_Embedding.*"]
exclude = ["contrib", "contrib.*"]

[tool.setuptools.package-data]
# libisabelle_vector.so is compiled by CMake and staged into the build tree by
# setup.py's build_py, not tracked in the source tree; listing it keeps
# sdist-derived and prebuilt-drop-in builds picking it up too. The other compiled
# artifact, _vecgather, is an ext_module and needs no entry here -- build_ext
# places it. (.dylib / .dll will join this list when those platforms land.)
Isabelle_Semantic_Embedding = ["embedding_config_template.yaml", "config_template.yaml",
                               "libisabelle_vector.so"]
