[build-system]
# setup.py stages a compiled artifact into the wheel and overrides bdist_wheel's
# tag; 77 is the first setuptools that reads `license` as an SPDX expression rather
# than free-form text. cmake and a C/C++ toolchain must also be on PATH -- those
# cannot be declared here. See setup.py.
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Isabelle_Semantic_Embedding"
# Read from ./VERSION rather than written here, because there are now two consumers:
# the wheel and the conda recipe (conda/recipe.yaml, fed by release-conda.yml). Two
# independent literals for one number is how they drift, and the drift is silent --
# a conda package whose version disagrees with the dist-info it installs.
dynamic = ["version"]
description = "Isabelle Semantic Embedding"
readme = "README.md"
license = "LGPL-2.1-or-later"
# The GNU convention for a library under the LGPL 2.1 (glibc's, among others):
# COPYING carries the ordinary GPL and COPYING.LIB the Lesser one. Both ship,
# because LGPL-2.1 section 3 lets a recipient convert any copy to the plain GPL,
# and they cannot exercise that right without its text.
license-files = ["COPYING", "COPYING.LIB"]
# _vecgather is compiled against the limited API, and Py_buffer / PyObject_GetBuffer
# entered it in 3.11, not before ("Limited API and stable ABI since Python 3.11",
# pybuffer.h) -- so an abi3 build cannot go lower. 3.10 reaches end of life on
# 2026-10-31 in any case. (desugar, hover, premise_selection and semantics also
# annotate with `X | Y` without importing `annotations` from __future__, which
# already required 3.10; that constraint is now subsumed.)
# The .4 floor: r2_sync's tar.zst extraction passes tarfile's `filter="data"`, the
# PEP 706 extraction-filter arg, which was only backported to CPython 3.11.4 --
# on 3.11.0-3.11.3 it is a TypeError, failing every pull.
requires-python = ">=3.11.4"
authors = [
    { name="Qiyuan Xu", email="xqyww123@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    # The wheel carries libisabelle_vector.so, an ELF pinned to one architecture.
    # macOS and Windows are planned; see MACOS_WINDOWS_SPLIT_PLAN.md in the parent tree.
    "Operating System :: POSIX :: Linux",
]
# Distribution names, not import names: `Isabelle_RPC_Host` is what you import, but
# `isabelle-rpc` is what pip resolves -- the former does not exist on PyPI, so a
# published wheel naming it could never be installed.
dependencies = [
    "msgpack",
    "isabelle-rpc>=0.3.0",
    "rocksdict",
    # Floor, not a pin. liblmdb 0.9.35 (bundled in py-lmdb 2.x) carries no
    # corruption regression over 0.9.29 -- the arc trends safer. The ONE release to
    # avoid is exactly 2.1.0, whose over-eager hardening raised a FALSE MDB_CORRUPTED
    # when overwriting values larger than a page (our ~8 KB vectors on 4 KB pages);
    # fixed the same day in 2.1.1 (py-lmdb #431). So float freely at >=2.1.1.
    "lmdb>=2.1.1",
    "platformdirs",
    "transformers",
    "numpy",
    "faiss-cpu",
    # premise_selection and semantic_embedding import it at module level. It also
    # arrives transitively, through mcp (via claude-agent-sdk) and huggingface-hub,
    # which is why nothing has broken -- but a dependency you import is one you own,
    # and mcp's httpx<1.0.0 would silently become our ceiling.
    "httpx",
    "diskcache",
    "claude-agent-sdk",
    "pyyaml",
    # r2_sync: the semantic DB is synced with a Cloudflare R2 bucket over S3.
    "boto3",
    # r2_sync's pull lock: a cross-platform advisory file lock (fcntl on POSIX,
    # msvcrt on Windows). Arrives transitively via huggingface-hub, but r2_sync
    # imports it directly, so it is declared here.
    "filelock",
    # r2_sync packs/unpacks the snapshot .tar.zst in pure Python (stdlib tarfile +
    # this), so the sync needs no tar/zstd binary on PATH -- the one thing that
    # kept pull from working on a bare Windows box.
    "zstandard",
]

[project.urls]
"Homepage" = "https://github.com/xqyww123/Premise_Embedding"

[tool.setuptools.dynamic]
version = { file = "VERSION" }

[tool.setuptools.packages.find]
include = ["Isabelle_Semantic_Embedding", "Isabelle_Semantic_Embedding.*"]
exclude = ["contrib", "contrib.*"]

[project.scripts]
# semantics_manage used to be a top-level script, so it never shipped in the wheel and
# the documented `semantics_manage.py pull` was not runnable after an install.
isabelle-semantics = "Isabelle_Semantic_Embedding.semantics_manage:main"

[tool.setuptools.package-data]
# libisabelle_vector.so is compiled by CMake and staged into the build tree by
# setup.py's build_py, not tracked in the source tree; listing it keeps
# sdist-derived and prebuilt-drop-in builds picking it up too. The other compiled
# artifact, _vecgather, is an ext_module and needs no entry here -- build_ext
# places it. (.dylib / .dll will join this list when those platforms land.)
Isabelle_Semantic_Embedding = ["embedding_config_template.yaml", "config_template.yaml",
                               "libisabelle_vector.so",
                               # The deformalisation agent runs with this directory as its
                               # cwd and setting_sources=["project"], so the three skills
                               # under .claude/ ARE its Isabelle knowledge -- without them
                               # it still runs, just uninformed.  They never shipped before.
                               #
                               # The dot component must be spelled out: setuptools' glob
                               # skips hidden entries, so "Agent_Interpretation_Dir/**/*"
                               # silently matches NOTHING here.  Measured, not assumed.
                               "Agent_Interpretation_Dir/.claude/**/*"]
